2014-11-20  Daniel Bates  <dabates@apple.com>

        [iOS] Temporarily skip almost all DRT tests

        Towards updating the expected results on iOS, temporarily skip running almost
        all DRT tests on iOS. We'll subsequently un-skip tests as we land updated/new
        expected results for them.

        * platform/ios-simulator/TestExpectations:

2014-11-20  Yusuke Suzuki  <utatane.tea@gmail.com>

        Rename String.prototype.contains to String.prototype.includes
        https://bugs.webkit.org/show_bug.cgi?id=138923

        Reviewed by Geoffrey Garen.

        * js/Object-getOwnPropertyNames-expected.txt:
        * js/script-tests/Object-getOwnPropertyNames.js:
        * js/script-tests/string-includes.js: Renamed from LayoutTests/js/script-tests/string-contains.js.
        (stringToSearchIn.toString):
        (startOffset.valueOf):
        (matchString.toString):
        (endOffset.valueOf):
        * js/string-includes-expected.txt: Renamed from LayoutTests/js/string-contains-expected.txt.
        * js/string-includes.html: Renamed from LayoutTests/js/string-contains.html.

2014-11-20  Chris Dumez  <cdumez@apple.com>

        Crash when destroying a Document that has a throttled timer still running
        https://bugs.webkit.org/show_bug.cgi?id=138914

        Reviewed by Benjamin Poulain.

        Add a layout test to test the case where a Document gets destroyed while
        throttled timer is still running.

        * fast/dom/resources/frame-with-throttled-timer.html: Added.
        * fast/dom/throttled-timer-running-on-document-destruction-expected.txt: Added.
        * fast/dom/throttled-timer-running-on-document-destruction.html: Added.

2014-11-20  Zalan Bujtas  <zalan@apple.com>

        Simple line layout: Introduce text fragment continuation.
        https://bugs.webkit.org/show_bug.cgi?id=138274

        Rebaseline for simple line layout's multiple rendere support.

        Reviewed by Antti Koivisto.
